[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/Items/MANA/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://GFX/Items/MANA/sprite_2.png" type="Texture" id=2]
[ext_resource path="res://GFX/Items/MANA/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://GFX/Items/MANA/sprite_3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Items/Mana.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.6079

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Mana" type="Area2D"]
z_index = 4
collision_layer = 4
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true
[connection signal="body_entered" from="." to="." method="_on_Mana_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
